tests/rosetta/out/Haskell/cartesian-product-of-two-or-more-lists-4.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/cartesian-product-of-two-or-more-lists-4.hs:126:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/cartesian-product-of-two-or-more-lists-4.hs:122:1
                 /workspace/mochi/tests/rosetta/out/Haskell/cartesian-product-of-two-or-more-lists-4.hs:126:1
    |
126 | main = do
    | ^^^^
